2008-01-17  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: remove ref from Objects hash prior to releasing it.

2008-01-17  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs: check for null reference in IsAlive.

2008-01-17  Mike Kestner  <mkestner@novell.com>

	* generator/Property.cs: missing Parent null check needed for direct
	GLib.Object subclasses.  Suggested by mario@gnome.cl.  [Fixes #321536]
	
2008-01-17  Mike Kestner  <mkestner@novell.com>

	* sample/Assistant.cs: new Gtk.Assistant sample.
	* sample/Makefile.am: hook in new sample.

2008-01-11  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: update version to 2.11.90.
	* configure.in.in: incorporate build service patch.
	* glib/glib-sharp-2.0.pc.in: add cflags for new api.xml.
	* glib/Makefile.am: install api.xml to correct dir.

2008-01-07  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: map "unsigned long" to LPUGen.

2008-01-02  Mike Kestner  <mkestner@novell.com>

	* gtk/MoveFocusHandler.cs: obsolete event types.
	* gtk/TextView.custom: obsolete move-focus signal. 
	* gtk/Window.custom: obsolete move-focus signal. 
	Compat fixes for removal of signals from gtk+ API. [Fixes #350770]

2007-12-17  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl: parse 'typedef struct\n{' properly.

2007-12-12  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: fix marshaling for ArrayCount params where
	casting is required, like gsize/size_t count parameters.

2007-12-11  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl: fix tightloop in single-line prop declarations.

2007-12-06  Mike Kestner  <mkestner@novell.com>

	* * : update to 2.12 API.

2007-12-04  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: add goffset mapping.

2007-12-04  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: check for default off_t size
	* generator/SymbolTable.cs: map off_t based on configure check.