@@ -1,3 +1,10 @@
+2008-01-22  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Object.cs: expose an internal ToggleRef prop.
+	* glib/Signal.cs: use ToggleRef for lookups instead of Object. Add
+	a Free method and release connections and gchandles.
+	* glib/ToggleRef.cs: add signal hash and release signals on free.
+
 2008-01-17  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Object.cs: remove ref from Objects hash prior to releasing it.
